# ghactions-audit

./: .ghactions-audit.example.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ghactions_audit/: __init__.py  __main__.py  cli.py  config.py  fixer.py  report.py  rules.py  rules_advanced.py  rules_extended.py  sarif.py  scanner.py
tests/: test_advanced_rules.py  test_audit.py
tests/fixtures/: secure.yml  vulnerable.yml  vulnerable_advanced.yml
